# spotify_link_extension_worker

./: Cargo.toml  wrangler.toml
src/: lib.rs  routes.rs  utils.rs
src/routes/: callback.rs  index.rs  login.rs
