[package]
name = "spotify_link_extension_worker"
version = "0.1.0"
authors = ["shiguma127 <shiguma127@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.7"
serde_json = "1.0.67"
http = "0.2"
uuid = { version = "0.8", features = ["v4","wasm-bindgen"]}
rspotify = {git = "https://github.com/shiguma127/rspotify.git", branch = "tomo/remove-send-from-all"}
wasm-bindgen = "=0.2.78"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    'Request',
    'Response',
    'ResponseInit',
    'Url',
    'UrlSearchParams',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
